--- a/conf/application.conf
+++ b/conf/application.conf
@@ -54,7 +54,7 @@ application.langs="en"
 # ~~~~~
 # Define the Global object class for this application.
 # Default to Global in the root package.
-application.global=uk.gov.hmrc.incometaxsubscription.MicroserviceGlobal
+application.global= config.MicroserviceGlobal
 
 # Router
 # ~~~~~
