SAR-60: Refactor to improve initial commit

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -2,9 +2,9 @@
 # This is the main configuration file for the application.
 # ~~~~~
 
-appName = api-example-microservice
+appName = income-tax-subscription
 
-appUrl = "http://api-example-microservice.service"
+appUrl = "http://income-tax-subscription.service"
 
 # Session Timeout
 # ~~~~
