--- a/conf/application.conf
+++ b/conf/application.conf
@@ -67,13 +67,13 @@ controllers {
     needsAuditing = false
   }
 
-  controllers.SandboxController = {
+  controllers.SandboxHelloWorldController = {
     needsAuth = false
     needsLogging = true
     needsAuditing = false
   }
 
-  controllers.LiveController = {
+  controllers.LiveHelloWorldController = {
     needsAuth = false
     needsLogging = true
     needsAuditing = false
