SAR-60: Simplified App Config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -63,19 +63,19 @@ controllers {
 
   controllers.Documentation = {
     needsAuth = false
-    needsLogging = true
+    needsLogging = false
     needsAuditing = false
   }
 
   controllers.SandboxHelloWorldController = {
     needsAuth = false
-    needsLogging = true
+    needsLogging = false
     needsAuditing = false
   }
 
   controllers.LiveHelloWorldController = {
     needsAuth = false
-    needsLogging = true
+    needsLogging = false
     needsAuditing = false
   }
 
@@ -112,67 +112,30 @@ metrics {
 
 
 # Microservice specific config
-
-Dev {
-
-
-  auditing {
-    enabled = false
-  }
-
-  microservice {
-    metrics {
-      graphite {
-        host = graphite
-        port = 2003
-        prefix = play.${appName}.
-        enabled = false
-      }
-    }
-
-    services {
-
-      datastream {
-        host = localhost
-        port = 8100
-      }
-
-      service-locator {
-        host = localhost
-        port = 9602
-      }
-    }
-  }
+auditing {
+  enabled = false
 }
 
-Prod {
-
-  auditing {
-    enabled = true
+microservice {
+  metrics {
+    graphite {
+      host = graphite
+      port = 2003
+      prefix = play.${appName}.
+      enabled = false
+    }
   }
 
+  services {
 
-  microservice {
-    metrics {
-      graphite {
-        host = graphite
-        port = 2003
-        prefix = play.${appName}.
-        enabled = true
-      }
+    datastream {
+      host = localhost
+      port = 8100
     }
 
-    services {
-
-      datastream {
-        host = datastream.service
-        port = 80
-      }
-
-     service-locator {
-        host = service-locator.service
-        port = 80
-      }
+    service-locator {
+      host = localhost
+      port = 9602
     }
   }
 }
