refactor-tests: Refactored test structure, added unit test for definitions controller action

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -74,7 +74,7 @@ controllers {
     needsAuditing = false
   }
 
-  controllers.Documentation = {
+  controllers.DocumentationController = {
     needsAuth = false
     needsLogging = false
     needsAuditing = false
