SAR-79: Added SandboxSubscriptionController into application.conf

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -80,6 +80,12 @@ controllers {
     needsAuditing = false
   }
 
+  controllers.SandboxSubscriptionController = {
+    needsAuth = false
+    needsLogging = false
+    needsAuditing = false
+  }
+
   controllers.SandboxHelloWorldController = {
     needsAuth = false
     needsLogging = false
