--- a/conf/application.conf
+++ b/conf/application.conf
@@ -74,7 +74,7 @@ controllers {
     needsAuditing = false
   }
 
-  controllers.DocumentationController = {
+  uk.gov.hmrc.api.controllers.DocumentationController = {
     needsAuth = false
     needsLogging = false
     needsAuditing = false
