SAR-79: Refactor to introduce controller packages due to pay reverse routing limitations

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -56,7 +56,7 @@ application.global = config.MicroserviceGlobal
 # Furthermore, it's assumed your route file is named properly.
 # So for an application router like `my.application.Router`,
 # you may need to define a router file `conf/my.application.routes`.
-# Default to Routes in the root package (and conf/routes)
+# Default to Routes in the root package (and conf/routesSpec)
 # !!!WARNING!!! DO NOT CHANGE THIS ROUTER
 application.router = prod.Routes
 
