SAR-77: Removed HelloWorld endpoints/controller/services

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -56,7 +56,7 @@ application.global = config.MicroserviceGlobal
 # Furthermore, it's assumed your route file is named properly.
 # So for an application router like `my.application.Router`,
 # you may need to define a router file `conf/my.application.routes`.
-# Default to Routes in the root package (and conf/routesSpec)
+# Default to Routes in the root package (and conf/routes)
 # !!!WARNING!!! DO NOT CHANGE THIS ROUTER
 application.router = prod.Routes
 
@@ -74,25 +74,13 @@ controllers {
     needsAuditing = false
   }
 
-  uk.gov.hmrc.api.controllers.DocumentationController = {
+  controllers.DocumentationController = {
     needsAuth = false
     needsLogging = false
     needsAuditing = false
   }
 
   controllers.SandboxSubscriptionController = {
-    needsAuth = false
-    needsLogging = false
-    needsAuditing = false
-  }
-
-  controllers.SandboxHelloWorldController = {
-    needsAuth = false
-    needsLogging = false
-    needsAuditing = false
-  }
-
-  controllers.LiveHelloWorldController = {
     needsAuth = false
     needsLogging = false
     needsAuditing = false
