wip app upgrade for play 2.5

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -19,6 +19,10 @@ appName = income-tax-subscription
 
 appUrl = "http://income-tax-subscription.service"
 
+play.modules.enabled += "com.kenshoo.play.metrics.PlayModule"
+play.http.requestHandler = "play.api.http.GlobalSettingsHttpRequestHandler"
+
+
 # Session Timeout
 # ~~~~
 # The default session timeout for the app is 15 minutes (900seconds).
@@ -68,6 +72,8 @@ application.router = prod.Routes
 # The below controllers are the default exceptions to this rule. 
 
 controllers {
+  confidenceLevel = 300
+
   com.kenshoo.play.metrics.MetricsController = {
     needsAuth = false
     needsLogging = false
@@ -120,7 +126,14 @@ metrics {
 
 # Microservice specific config
 auditing {
-  enabled = false
+  enabled = true
+  traceRequests = true
+  consumer {
+    baseUri {
+      host = localhost
+      port = 8100
+    }
+  }
 }
 
 microservice {
@@ -134,6 +147,11 @@ microservice {
   }
 
   services {
+
+    auth {
+      host = localhost
+      port = 8500
+    }
 
     datastream {
       host = localhost
