Initial skeleton for connector to DES/ETMP created, still to map responses to subscribe property

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -162,5 +162,11 @@ microservice {
       host = localhost
       port = 9602
     }
+    des {
+      host=localhost
+      port=9640
+      environment="isit"
+      token="test"
+    }
   }
 }
