--- a/conf/application.conf
+++ b/conf/application.conf
@@ -162,5 +162,12 @@ microservice {
       host = localhost
       port = 9602
     }
+
+    registration {
+      host = localhost
+      port = 9999
+      environment = "ist0"
+      authorization-token = ""
+    }
   }
 }
