updated application conf with the local des configs

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -72,7 +72,7 @@ application.router = prod.Routes
 # The below controllers are the default exceptions to this rule. 
 
 controllers {
-  confidenceLevel = 300
+  confidenceLevel = 200
 
   com.kenshoo.play.metrics.MetricsController = {
     needsAuth = false
@@ -163,11 +163,11 @@ microservice {
       port = 9602
     }
 
-    registration {
+    des {
       host = localhost
-      port = 9999
-      environment = "ist0"
-      authorization-token = ""
+      port = 9562
+      environment = "dev"
+      authorization-token = "dev"
     }
   }
 }
