updated the route and configs to make use of the auth filter

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -92,6 +92,16 @@ controllers {
     needsAuditing = false
   }
 
+  controllers.subscription.SubscriptionController {
+    needsAuth = true
+    needsLogging = false
+    needsAuditing = false
+    authParams {
+      pattern = "/([\\w-]+)/[\\w+]+/([^/]+)/?.*"
+      account = "paye"
+    }
+  }
+
 }
 
 
