SAR-343: wip gg admin connector

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -179,5 +179,10 @@ microservice {
       environment = "dev"
       authorization-token = "dev"
     }
+
+    gg-admin {
+      host = localhost
+      port = 9936
+    }
   }
 }
