SAR-348: added call to authenticator to refresh user profile

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -163,6 +163,11 @@ microservice {
       port = 8500
     }
 
+    authenticator {
+      host = localhost
+      port = 9905
+    }
+
     datastream {
       host = localhost
       port = 8100
