Added connector for GG enrolment, unit tests still to be added

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -92,6 +92,13 @@ controllers {
     needsAuditing = false
   }
 
+  controllers.subscription.Dummy = {
+    needsAuth = false
+    needsLogging = false
+    needsAuditing = false
+  }
+
+
   controllers.subscription.SubscriptionController {
     needsAuth = true
     needsLogging = false
@@ -179,5 +186,10 @@ microservice {
       environment = "dev"
       authorization-token = "dev"
     }
+    government-gateway {
+      host = localhost
+      port = 8570
+    }
+
   }
 }
