copied throttling from SCRS

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -19,7 +19,10 @@ appName = income-tax-subscription
 
 appUrl = "http://income-tax-subscription.service"
 
+# Define any modules used here
 play.modules.enabled += "com.kenshoo.play.metrics.PlayModule"
+play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoHmrcModule"
+
 play.http.requestHandler = "play.api.http.GlobalSettingsHttpRequestHandler"
 
 
@@ -102,6 +105,16 @@ controllers {
     }
   }
 
+  controllers.subscription.UserAccessController {
+    needsAuth = true
+    needsLogging = false
+    needsAuditing = false
+    authParams {
+      pattern = "/([\\w-]+)/[\\w+]+/([^/]+)/?.*"
+      account = "paye"
+    }
+  }
+
 }
 
 
@@ -145,6 +158,13 @@ auditing {
     }
   }
 }
+
+mongodb {
+  uri = "mongodb://localhost:27017/itsa"
+}
+
+# the value below is valid for local environment only
+mongo-encryption.key = "MTIzNDU2Nzg5MDEyMzQ1Ng=="
 
 microservice {
   metrics {
@@ -194,5 +214,8 @@ microservice {
       host = localhost
       port = 9936
     }
+
+    throttle-threshold = 15
+
   }
 }
