--- a/conf/application.conf
+++ b/conf/application.conf
@@ -105,7 +105,7 @@ controllers {
     }
   }
 
-  controllers.subscription.UserAccessController {
+  controllers.throttling.UserAccessController {
     needsAuth = true
     needsLogging = false
     needsAuditing = false
