--- a/conf/application.conf
+++ b/conf/application.conf
@@ -115,6 +115,12 @@ controllers {
     }
   }
 
+  testonly.controllers.ResetThrottleController {
+    needsAuth = false
+    needsLogging = false
+    needsAuditing = false
+  }
+
 }
 
 
