added debug to warn function to change the logging used to record splunk events from debug to warn

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -169,6 +169,14 @@ mongodb {
   uri = "mongodb://localhost:27017/itsa"
 }
 
+feature-switching {
+  # debugToWarn is used to change the logging for splunk events from debug to warn
+  # the purpose of this flag is so we can easily toggle the logs in the development enironments e.g. QA
+  # this flag should always be set to false here and set to true in the required testing environments
+  # N.B. this flag MUST never be set to true in prod/live as splunk events may contain sensitive data
+  debugToWarn = false
+}
+
 # the value below is valid for local environment only
 mongo-encryption.key = "MTIzNDU2Nzg5MDEyMzQ1Ng=="
 
@@ -210,12 +218,12 @@ microservice {
       environment = "dev"
       authorization-token = "dev"
     }
-    
+
     government-gateway {
       host = localhost
       port = 8570
     }
-    
+
     gg-admin {
       host = localhost
       port = 9936
