--- a/conf/application.conf
+++ b/conf/application.conf
@@ -175,6 +175,7 @@ feature-switching {
   # this flag should always be set to false here and set to true in the required testing environments
   # N.B. this flag MUST never be set to true in prod/live as splunk events may contain sensitive data
   debugToWarn = false
+  useNewDesRoute = true
 }
 
 # the value below is valid for local environment only
@@ -215,6 +216,12 @@ microservice {
     des {
       host = localhost
       port = 9562
+      environment = "dev"
+      authorization-token = "dev"
+    }
+
+    new-des {
+      url = "http://localhost:9562"
       environment = "dev"
       authorization-token = "dev"
     }
