added subscription status controller

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -93,6 +93,16 @@ controllers {
     }
   }
 
+  controllers.subscription.SubscriptionStatusController {
+    needsAuth = true
+    needsLogging = false
+    needsAuditing = false
+    authParams {
+      pattern = "/([\\w-]+)/[\\w+]+/([^/]+)/?.*"
+      account = "paye"
+    }
+  }
+
   controllers.throttling.UserAccessController {
     needsAuth = true
     needsLogging = false
