added the custom auth function and updated controllers and routes to use that instead

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -83,24 +83,17 @@ controllers {
     needsAuditing = false
   }
 
+  # the auth for these controllers are handled using the authenticated controller trait and its methods
   controllers.subscription.SubscriptionController {
-    needsAuth = true
+    needsAuth = false
     needsLogging = false
     needsAuditing = false
-    authParams {
-      pattern = "/([\\w-]+)/[\\w+]+/([^/]+)/?.*"
-      account = "paye"
-    }
   }
 
   controllers.throttling.UserAccessController {
-    needsAuth = true
+    needsAuth = false
     needsLogging = false
     needsAuditing = false
-    authParams {
-      pattern = "/([\\w-]+)/[\\w+]+/([^/]+)/?.*"
-      account = "paye"
-    }
   }
 
   testonly.controllers.ResetThrottleController {
