updated the auth for subscription status controller to use the new auth

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -91,13 +91,9 @@ controllers {
   }
 
   controllers.subscription.SubscriptionStatusController {
-    needsAuth = true
+    needsAuth = false
     needsLogging = false
     needsAuditing = false
-    authParams {
-      pattern = "/([\\w-]+)/[\\w+]+/([^/]+)/?.*"
-      account = "paye"
-    }
   }
 
   controllers.throttling.UserAccessController {
