updated refresh-profile with the new url

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -172,11 +172,6 @@ microservice {
       port = 8500
     }
 
-    authenticator {
-      host = localhost
-      port = 9905
-    }
-
     datastream {
       host = localhost
       port = 8100
@@ -207,6 +202,11 @@ microservice {
     gg-admin {
       host = localhost
       port = 9936
+    }
+
+    gg-authentication {
+      host = localhost
+      port = 9987
     }
 
     throttle-threshold = 15
