WIP: plenty of errors to fix yet

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -21,6 +21,7 @@ appUrl = "http://income-tax-subscription.service"
 
 # Define any modules used here
 play.modules.enabled += "com.kenshoo.play.metrics.PlayModule"
+play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoHmrcModule"
 
 play.http.requestHandler = "play.api.http.GlobalSettingsHttpRequestHandler"
 
@@ -126,6 +127,10 @@ auditing {
   }
 }
 
+mongodb {
+  uri = "mongodb://localhost:27017/itsa"
+}
+
 feature-switching {
   # debugToWarn is used to change the logging for splunk events from debug to warn
   # the purpose of this flag is so we can easily toggle the logs in the development enironments e.g. QA
@@ -134,6 +139,9 @@ feature-switching {
   debugToWarn = false
   useNewDesRoute = false
 }
+
+# the value below is valid for local environment only
+mongo-encryption.key = "MTIzNDU2Nzg5MDEyMzQ1Ng=="
 
 microservice {
   metrics {
