SAR-921 - Store nino against token

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -143,6 +143,8 @@ feature-switching {
 # the value below is valid for local environment only
 mongo-encryption.key = "MTIzNDU2Nzg5MDEyMzQ1Ng=="
 
+paperless-preference.expiry-seconds = 3600
+
 microservice {
   metrics {
     graphite {
