SAR-1027 - Added error handler for AuthorisationException

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -83,7 +83,7 @@ controllers {
 }
 
 # Json error handler
-play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.http.JsonErrorHandler"
+play.http.errorHandler = "config.ErrorHandler"
 
 # Evolutions
 # ~~~~~
