implemented end point to update feature switch

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -150,10 +150,8 @@ microservice {
       authorization-token = "dev"
     }
 
-    new-des {
+    stub-des {
       url = "http://localhost:9562"
-      environment = "dev"
-      authorization-token = "dev"
     }
 
     government-gateway {
