Add environment and authorization-token for stub

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -152,6 +152,8 @@ microservice {
 
     stub-des {
       url = "http://localhost:9562"
+      environment = "dev"
+      authorization-token = "dev"
     }
 
     government-gateway {
