--- a/conf/application.conf
+++ b/conf/application.conf
@@ -19,7 +19,7 @@ include "backend.conf"
 
 appName = income-tax-subscription
 
-appUrl = "https://income-tax-subscription.service"
+appUrl = "http://income-tax-subscription.service"
 
 # An ApplicationLoader that uses Guice to bootstrap the application.
 play.application.loader = "uk.gov.hmrc.play.bootstrap.ApplicationLoader"
